CineReserveProject/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movierent-ingress
spec:
  rules:
    - host: movierent.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: api.movierent.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: movierent-api
                port:
                  number: 5000
